--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
 <!--    <string name="app_name">saral bhagavad gita Hindi</string>-->
     <string name="app_name">सरल भगवद्गीता</string>
+    <!--    admob cred-->
+    <string name="admob_app_id">ca-app-pub-2935758820526888~5689480104</string>
+    <string name="admob_banner_ad_unit_id">ca-app-pub-2935758820526888/4308115676</string>
+    <string name="admob_interstitial_ad_unit_id">ca-app-pub-2935758820526888/5765463731</string>
+
     <!--    splash screen-->
     <string name="splash_screen_title">॥ सरल भगवद्गीता ॥</string>
     <!--    verse rcv layout-->
@@ -40,14 +45,9 @@
         <item>मोक्षसन्न्यास योग</item>
     </string-array>
 
-
-    <string name="admob_app_id">ca-app-pub-2935758820526888~5689480104</string>
-    <string name="admob_banner_ad_unit_id">ca-app-pub-2935758820526888/4308115676</string>
-    <string name="admob_interstitial_ad_unit_id">ca-app-pub-2935758820526888/5765463731</string>
-
-<!--    <string name="admob_app_id_test">ca-app-pub-3940256099942544~3347511713</string>-->
-<!--    <string name="admob_banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>-->
-<!--    <string name="admob_interstitial_ad_unit_id_test">ca-app-pub-3940256099942544/1033173712</string>-->
+<!--    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
+<!--    <string name="admob_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
+<!--    <string name="admob_interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->
 
 
 
